set hamburget menu to position fixed and changed the styling to look better on mobile

--- a/src/components/landingpage/landingpage.scss
+++ b/src/components/landingpage/landingpage.scss
@@ -3,7 +3,6 @@ body {
     padding : 0px;
     box-sizing : border-box;
     overflow-x : hidden;
-    overflow-y : hidden;
     font-family: 'Oxygen', sans-serif;
 }
 .landing-page-container {
@@ -42,16 +41,19 @@ body {
     display : flex;
     align-items : center;
     justify-content: center;
+    box-shadow : 0px 0px 10px black;
 }
 .heading {
 padding : 10px;
 display : block;
+text-align : center;
 }
 .more-information {
 padding : 10px;
 display : block;
 line-height: 2em;
 font-weight : 600;
+text-align : center;
 }
 .prototype-graph {
     height : 60vh;
@@ -61,13 +63,14 @@ font-weight : 600;
     display : flex;
     align-items : center;
     justify-content : center;
+    box-shadow : 0px 0px 10px black;
 }
-.prototype-graph div {
-    width : 70%;
+.prototype-graph-container {
+    min-width : 200px;
+    max-width : 300px;
     margin-right : auto;
     margin-left : auto;
     display : block;
-    min-width : 250px;
     height : auto;
 }
 @media screen and (max-width: 800px) {
@@ -78,6 +81,8 @@ font-weight : 600;
         background-repeat : no-repeat;
         background-size : cover;
         overflow-x : hidden;
+        overflow-y : hidden;
+        height : 90vh;
     }
     .content-container {
         position : relative;
@@ -91,19 +96,18 @@ font-weight : 600;
     .prototype-graph {
         width : 100%;
         background-color : white;
-        min-width : 200px;
         display : flex;
         align-items:flex-start;
         justify-content:center;
         height : auto;
-        margin-bottom : 30px;
+        overflow : hidden;
     }
-    .prototype-graph div {
-        min-width : 100px;
-        max-width : 300px;
+    .prototype-graph-container {
+        max-width : 100px;
         margin-right : auto;
         margin-left : auto;
         display : block;
+        padding-bottom : 15px;
     }
     .message {
         width : 100%;
